# Hello_SDL

./: .gitignore  CMakeLists.txt  README.md  cmake_MSVC_x86.bat
src/: hello_world.cpp  point.h
